Fri Mar 17 18:38:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added set_weighting() method to match, to set weighting scheme
	  to be used (as a value from the IRWeight::weight_type enum).
	  Updated OmEnquire to use this: ability to set weight is just
	  one little step away from the API and the user now.

Fri Mar 17 13:39:10 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.1.1

Thu Mar 16 17:33:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New program "internaltest" added to the test suite, for
	  testing code behind the API.

	* Can now disable pthread support via configure

Thu Mar 16 13:01:46 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixes for uninitialised memory problems.  (malloc was being
	  assumed to zero the returned memory.)

Thu Mar 16 12:49:44 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New OmDocument which is copyable, and is actually a wrapper
	  around LeafDocument.

	* Added reference-counted smart pointer, used in above.

Wed Mar 15 18:27:10 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Now uses a MultiMatch object to do match.  Doesn't yet use more
	  than one LeafMatch for this object though.

Tue Mar 14 18:46:17 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Match now has the appropriate virtual methods, which are
	  implemented by LeafMatch, and will be implemented by MultiMatch.
	  Some work in OmEnquire, so that I can test this.

Tue Mar 14 13:33:43 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make sure we don't have -g in compile line if debugging is off.

Thu Mar  9 17:12:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.1.0

Thu Mar  9 17:48:02 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix many spurious debugging messages

Thu Mar  9 17:03:35 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
