@@ -12,6 +12,6 @@ noinst_LTLIBRARIES = libmatcher.la
 
 libmatcher_la_SOURCES = orpostlist.cc andpostlist.cc \
  andnotpostlist.cc andmaybepostlist.cc xorpostlist.cc \
- irweight.cc bm25weight.h bm25weight.cc tradweight.h tradweight.cc \
+ irweight.cc boolweight.h bm25weight.h bm25weight.cc tradweight.h tradweight.cc \
  filterpostlist.cc ortermlist.cc expandweight.cc rset.cc \
  leafmatch.cc multimatch.cc expand.cc stats.cc
