@@ -1,3 +1,8 @@
+Fri Mar 17 18:55:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added BoolWeight object, returns zero for all methods, for pure
+	  boolean queries.
+
 Fri Mar 17 18:38:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Added set_weighting() method to match, to set weighting scheme
